--- a/GIErosion2021.bib
+++ b/GIErosion2021.bib
@@ -85,7 +85,7 @@
 }
 
 @article{CPS+21,
-  title = {Relationship between {{Air Voids}} and {{Permeability}}: {{Effect}} on {{Water Scouring Resistance}} in {{HMA}}},
+  title = {Relationship between {{Air Voids}} and {{Permeability}}: Effect on {{Water Scouring Resistance}} in {{HMA}}},
   shorttitle = {Relationship between {{Air Voids}} and {{Permeability}}},
   author = {Che, Tiankai and Pan, Baofeng and Sha, Dong and Zhang, Yuanteng and You, Zhanping},
   date = {2021-04-01},
@@ -303,7 +303,7 @@
 }
 
 @article{KSR+21,
-  title = {Engineering {{Lessons}} from {{September}} 28, 2018 {{Indonesian Tsunami}}: {{Scouring Mechanisms}} and {{Effects}} on {{Infrastructure}}},
+  title = {Engineering {{Lessons}} from {{September}} 28, 2018 {{Indonesian Tsunami}}: Scouring {{Mechanisms}} and {{Effects}} on {{Infrastructure}}},
   shorttitle = {Engineering {{Lessons}} from {{September}} 28, 2018 {{Indonesian Tsunami}}},
   author = {Krautwald, Clemens and Stolle, Jacob and Robertson, Ian and Achiari, Hendra and Mikami, Takahito and Nakamura, Ryota and Takabatake, Tomoyuki and Nishida, Yuta and Shibayama, Tomoya and Esteban, Miguel and Goseberg, Nils and Nistor, Ioan},
   date = {2021-03-01},
@@ -820,7 +820,7 @@
 }
 
 @article{WCB+21,
-  title = {Experimental and {{Numerical Study}} on {{Scour}}-{{Protection Methods}} in a {{Stilling Basin}}: {{Case Study}} of {{Chancy}}-{{Pougny Dam}}},
+  title = {Experimental and {{Numerical Study}} on {{Scour}}-{{Protection Methods}} in a {{Stilling Basin}}: Case {{Study}} of {{Chancy}}-{{Pougny Dam}}},
   shorttitle = {Experimental and {{Numerical Study}} on {{Scour}}-{{Protection Methods}} in a {{Stilling Basin}}},
   author = {W\"uthrich, Davide and Chamoun, Sabine and Bollaert, Erik F. R. and De Cesare, Giovanni and Schleiss, Anton J.},
   date = {2021-06-01},
